оформление цвета и шрифта
оформление цвета и шрифта  на главной странице и в Портфолио

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
+      <a class="logo" href=""><span class="span">Web</span>Studio</a>
       <ul>
         <li><a class="link-page" href="">Студия</a></li>
         <li><a class="link-page" href="./portfolio.html">Портфолио</a></li>
@@ -19,7 +22,7 @@
       <li><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
       <li> <a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a> </li>
     </ul>
-
+  </header>
       <main>
         <section class="main-section">
         <h1 class="main-section-h">Эффективные решения для вашего бизнеса</h1>
@@ -30,28 +33,28 @@
         <section class="activity">
           <ul>
             <li>
-              <h3>Внимание к деталям</h3>
+              <h3 class="activity-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="activity-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
             <li>
-              <h3>Пунктуальность?</h3>
+              <h3 class="activity-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="activity-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
             <li>
-              <h3>Планирование</h3>
+              <h3 class="activity-title">ПЛАНИРОВАНИЕ</h3>
               <p class="activity-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
             <li>
-              <h3>Современные технологии</h3>
+              <h3 class="activity-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="activity-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -60,7 +63,7 @@
           </ul>
         </section>
         <section>
-          <h2>Чем мы занимаемся</h2>
+          <h2 class="direction">Чем мы занимаемся</h2>
           <ul>
             <li>
               <img
@@ -83,28 +86,28 @@
           </ul>
         </section>
         <section class="command">
-          <h2>Наша команда</h2>
+          <h2 class="command-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images.new/command1.jpg" alt="Мужчина с бородой" />
-            <h3>Игорь Демьяненко</h3>
-            <p> class="command-person" Product Designer</p>
+            <h3 class="command-name">Игорь Демьяненко</h3>
+            <p class="command-person">Product Designer</p>
           </li>
           <li>
             <img src="./images.new/command2.jpg" alt="Женщина в очках" />
-            <h3>Ольга Репина</h3>
+            <h3 class="command-name">Ольга Репина</h3>
             <p class="command-person">   Frontend Developer</p>
           </li>
           <li>
             <img src="./images.new/command3.jpg" alt="Улыбающийся мужчина" />
-            <h3>Николай Тарасов</h3>
+            <h3 class="command-name">Николай Тарасов</h3>
             <p  class="command-person">Marketing</p>
           </li>
           <li>
             <img
               src="./images.new/command4.jpg"
               alt="Мужчина с бородой и очками" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="command-name">Михаил Ермаков</h3>
              
             <p class="command-person" >UI Designer</p>
           </li>
@@ -113,13 +116,13 @@
       </main>
       <footer class="footer">
     
-        <a href="./index.html">WebStudio</a>
+        <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
         <ul>
         <li>  <address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address> </li>
         <li> <a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
         <li> <a class="footer-nav" href="tel:++380961111111">+38 096 111 11 11</a>  </li>
       </ul>
       </footer>
-    </header>
+   
   </body>
 </html>
