--- a/portfolio.html
+++ b/portfolio.html
@@ -5,77 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html">Web<span>Studio</span></a>
+      <a class="logo" href=""><span class="span">Web</span>Studio</a>
       <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="./index.html">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+        <li><a class="link-page" href="">Студия</a></li>
+        <li><a class="link-page" href="./index.html">Портфолио</a></li>
+        <li><a class="link-page" href="">Контакты</a></li>
       </ul>
     </header>
     <main>
       <section>
         <ul>
-          <li><button>Все</button></li>
-          <li><button>Веб-сайты</button></li>
-          <li><button>Приложения</button></li>
-          <li><button>Дизайн</button></li>
-          <li><button>Маркетинг</button></li>
+          <li><button class="filters">Все</button></li>
+          <li><button class="filters">Веб-сайты</button></li>
+          <li><button class="filters">Приложения</button></li>
+          <li><button class="filters">Дизайн</button></li>
+          <li><button class="filters">Маркетинг</button></li>
         </ul>
       </section>
-      <section>
+      <section class="portfolio">
         <ul>
           <li>
             <img
               src="./images.new/attainment1.jpg"
               alt="Страница сайта на ноутбуке"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title">Технокряк</h3>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
 
           <li>
             <img src="./images.new/attainment2.jpg" alt="Постер спортсметов" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+            <p class="portfolio-text">Дизайн</p>
           </li>
 
           <li>
             <img src="./images.new/attainment3.jpg" alt="Логотим ресторана" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title">Ресторан Seafood</h3>
+            <p class="portfolio-text">Приложение</p>
           </li>
 
           <li>
             <img src="./images.new/attainment4.jpg" alt="Наушники" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title">Проект Prime</h3>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
 
           <li>
             <img src="./images.new/attainment5.jpg" alt="Две коробки" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title">Проект Boxes</h3>
+            <p class="portfolio-text">Приложение</p>
           </li>
 
           <li>
             <img src="./images.new/attainment6.jpg" alt="Монитор с картой" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title">Inspiration has no Borders</h3>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
 
           <li>
             <img src="./images.new/attainment7.jpg" alt="Журнал" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title">Издание Limited Edition</h3>
+            <p class="portfolio-text">Дизайн</p>
           </li>
 
           <li>
             <img src="./images.new/attainment8.jpg" alt="Ярлык с логотипом" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title">Проект LAB</h3>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
 
           <li>
@@ -83,17 +90,31 @@
               src="./images.new/attainment9.jpg"
               alt="Страница сайта на ноутбуке"
             />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title">Growing Business</h3>
+            <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:++380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+      <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
+      <ul>
+        <li>
+          <address class="footer-adress">
+            г. Киев, пр-т Леси Украинки, 26
+          </address>
+           
+        </li>
+        <li>
+          <a class="footer-nav" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          > 
+        </li>
+        <li>
+          <a class="footer-nav" href="tel:++380961111111">+38 096 111 11 11</a>
+           
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
