оформление/ коррекция кнопок

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <header>
+      <div class="container">
       <a class="logo" href=""><span class="span">Web</span>Studio</a>
       <ul>
         <li><a class="link-page" href="">Студия</a></li>
@@ -22,6 +23,7 @@
       <li><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
       <li> <a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a> </li>
     </ul>
+    </div>
   </header>
       <main>
         <section class="main-section">
