--- a/portfolio.html
+++ b/portfolio.html
@@ -15,27 +15,32 @@
   </head>
   <body>
     <header>
-      <a class="logo" href=""><span class="span">Web</span>Studio</a>
-      <ul>
-        <li><a class="link-page" href="">Студия</a></li>
-        <li><a class="link-page" href="./index.html">Портфолио</a></li>
-        <li><a class="link-page" href="">Контакты</a></li>
-      </ul>
+      <div class="container">
+        <a class="logo" href=""><span class="span">Web</span>Studio</a>
+        <ul>
+          <li><a class="link-page" href="">Студия</a></li>
+          <li><a class="link-page" href="./index.html">Портфолио</a></li>
+          <li><a class="link-page" href="">Контакты</a></li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <ul>
-          <li><button class="filters">Все</button></li>
-          <li><button class="filters">Веб-сайты</button></li>
-          <li><button class="filters">Приложения</button></li>
-          <li><button class="filters">Дизайн</button></li>
-          <li><button class="filters">Маркетинг</button></li>
-        </ul>
+      <section">
+       <div class="container"> 
+         <ul>
+        <li><button class="filters">Все</button></li>
+        <li><button class="filters">Веб-сайты</button></li>
+        <li><button class="filters">Приложения</button></li>
+        <li><button class="filters">Дизайн</button></li>
+        <li><button class="filters">Маркетинг</button></li>
+      </ul>
+    </div>
       </section>
       <section class="portfolio">
+        <div class="container">
         <ul>
           <li>
-            <img
+            <img class="portfolio-img"
               src="./images.new/attainment1.jpg"
               alt="Страница сайта на ноутбуке"
             />
@@ -44,49 +49,49 @@
           </li>
 
           <li>
-            <img src="./images.new/attainment2.jpg" alt="Постер спортсметов" />
+            <img class="portfolio-img" src="./images.new/attainment2.jpg" alt="Постер спортсметов" />
             <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
 
           <li>
-            <img src="./images.new/attainment3.jpg" alt="Логотим ресторана" />
+            <img class="portfolio-img" src="./images.new/attainment3.jpg" alt="Логотим ресторана" />
             <h3 class="portfolio-title">Ресторан Seafood</h3>
             <p class="portfolio-text">Приложение</p>
           </li>
 
           <li>
-            <img src="./images.new/attainment4.jpg" alt="Наушники" />
+            <img class="portfolio-img" src="./images.new/attainment4.jpg" alt="Наушники" />
             <h3 class="portfolio-title">Проект Prime</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
 
           <li>
-            <img src="./images.new/attainment5.jpg" alt="Две коробки" />
+            <img class="portfolio-img" src="./images.new/attainment5.jpg" alt="Две коробки" />
             <h3 class="portfolio-title">Проект Boxes</h3>
             <p class="portfolio-text">Приложение</p>
           </li>
 
           <li>
-            <img src="./images.new/attainment6.jpg" alt="Монитор с картой" />
+            <img class="portfolio-img" src="./images.new/attainment6.jpg" alt="Монитор с картой" />
             <h3 class="portfolio-title">Inspiration has no Borders</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
 
           <li>
-            <img src="./images.new/attainment7.jpg" alt="Журнал" />
+            <img class="portfolio-img" src="./images.new/attainment7.jpg" alt="Журнал" />
             <h3 class="portfolio-title">Издание Limited Edition</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
 
           <li>
-            <img src="./images.new/attainment8.jpg" alt="Ярлык с логотипом" />
+            <img class="portfolio-img" src="./images.new/attainment8.jpg" alt="Ярлык с логотипом" />
             <h3 class="portfolio-title">Проект LAB</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
 
           <li>
-            <img
+            <img class="portfolio-img"
               src="./images.new/attainment9.jpg"
               alt="Страница сайта на ноутбуке"
             />
@@ -94,10 +99,12 @@
             <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
+      <div class="container">
+        <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
       <ul>
         <li>
           <address class="footer-adress">
@@ -115,6 +122,7 @@
            
         </li>
       </ul>
+      </div>
     </footer>
   </body>
 </html>
