--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container header-div">
       <a class="logo" href=""><span class="span">Web</span>Studio</a>
       <ul class="link-ul-page">
-        <li><a class="link-page" href="">Студия</a></li>
-        <li><a class="link-page" href="./portfolio.html">Портфолио</a></li>
-        <li><a class="link-page" href="">Контакты</a></li></li>
+        <li class="link-li-page"><a class="link-page" href="">Студия</a></li>
+        <li class="link-li-page"><a class="link-page" href="./portfolio.html">Портфолио</a></li>
+      <li class="link-li-page"><a class="link-page" href="">Контакты</a></li></li>
       </ul>
-<ul  class="link-ul-page">
+<ul  class="link-ul-contact">
 
-      <li><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-      <li> <a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a> </li>
+      <li class="link-li-page"><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="link-li-page"><a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a></li>
     </ul>
     </div>
   </header>
       <main>
         <section class="main-section">
-        <h1 class="main-section-h">Эффективные решения <br> для вашего бизнеса</h1>
+        <h1 class="main-section-h">Эффективные решения<br>для вашего бизнеса</h1>
         <button class="main-section-button">Заказать услугу</button>
      </section>
 
         <section class="activity-section">
           <div class="container">
           <ul class="link-ul-page">
-            <li>
+            <li class="activity-li">
               <h3 class="activity-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="activity-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="activity-li">
               <h3 class="activity-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="activity-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="activity-li">
               <h3 class="activity-title">ПЛАНИРОВАНИЕ</h3>
               <p class="activity-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="activity-li">
               <h3 class="activity-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="activity-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -67,23 +67,23 @@
         </div>
         </section>
         <section class="direction-section">
-          <div class="container" >
+          <div class="container  " >
           <h2 class="direction">Чем мы занимаемся</h2>
           <ul>
-            <li>
-              <img
+            <li class="direction-li">
+              <img class="img-class"
                 src="./images.new/specification1.jpg"
                 alt="Человек за компьютером"
               />
             </li>
-            <li>
-              <img
+            <li class="direction-li">
+              <img class="img-class"
                 src="./images.new/specification2.jpg"
                 alt="Человек смотрит в телефон"
               />
             </li>
-            <li>
-              <img
+            <li class="direction-li">
+              <img class="img-class"
                 src="./images.new/specification3.jpg"
                 alt="Человек смотрит в планшет"
               />
@@ -101,17 +101,17 @@
             <p class="command-person">Product Designer</p>
           </li>
           <li>
-            <img src="./images.new/command2.jpg" alt="Женщина в очках" />
+            <img class="command-photo"  src="./images.new/command2.jpg" alt="Женщина в очках" />
             <h3 class="command-name">Ольга Репина</h3>
             <p class="command-person">   Frontend Developer</p>
           </li>
           <li>
-            <img src="./images.new/command3.jpg" alt="Улыбающийся мужчина" />
+            <img class="command-photo"  src="./images.new/command3.jpg" alt="Улыбающийся мужчина" />
             <h3 class="command-name">Николай Тарасов</h3>
             <p  class="command-person">Marketing</p>
           </li>
           <li>
-            <img
+            <img class="command-photo" 
               src="./images.new/command4.jpg"
               alt="Мужчина с бородой и очками" />
             <h3 class="command-name">Михаил Ермаков</h3>
@@ -125,12 +125,11 @@
       <footer class="footer">
       <div class="container">
     
-    
         <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
         <ul>
-        <li>  <address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address> </li>
-        <li> <a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-        <li> <a class="footer-nav-tel"  href="tel:++380961111111">+38 096 111 11 11</a>  </li>
+        <li><address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address></li>
+        <li><a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="footer-nav-tel"  href="tel:++380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
       </footer>
