--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,21 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <a class="logo" href=""><span class="span">Web</span>Studio</a>
-        <ul>
-          <li><a class="link-page" href="">Студия</a></li>
-          <li><a class="link-page" href="./index.html">Портфолио</a></li>
-          <li><a class="link-page" href="">Контакты</a></li>
-        </ul>
-      </div>
-    </header>
+      <div class="container header-div">
+      <a class="logo" href=""><span class="span">Web</span>Studio</a>
+      <ul class="link-ul-page">
+        <li class="link-li-page"><a class="link-page" href="">Студия</a></li>
+        <li class="link-li-page"><a class="link-page" href="./index.html">Портфолио</a></li>
+      <li class="link-li-page"><a class="link-page" href="">Контакты</a></li></li>
+      </ul>
+<ul  class="link-ul-contact">
+
+      <li class="link-li-page"><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="link-li-page"><a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a></li>
+    </ul>
+    </div>
+  </header>
+      
     <main>
       <section">
        <div class="container"> 
@@ -104,25 +110,14 @@
     </main>
     <footer class="footer">
       <div class="container">
+    
         <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
-      <ul>
-        <li>
-          <address class="footer-adress">
-            г. Киев, пр-т Леси Украинки, 26
-          </address>
-           
-        </li>
-        <li>
-          <a class="footer-nav" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          > 
-        </li>
-        <li>
-          <a class="footer-nav" href="tel:++380961111111">+38 096 111 11 11</a>
-           
-        </li>
+        <ul>
+        <li><address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address></li>
+        <li><a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="footer-nav-tel"  href="tel:++380961111111">+38 096 111 11 11</a></li>
       </ul>
-      </div>
-    </footer>
+    </div>
+      </footer>
   </body>
 </html>
