готовая страница студия
исправление ошибок

--- a/index.html
+++ b/index.html
@@ -5,58 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <div class="container header-div">
-      <a class="logo" href=""><span class="span">Web</span>Studio</a>
-      <ul class="link-ul-page">
-        <li class="link-li-page"><a class="link-page" href="">Студия</a></li>
-        <li class="link-li-page"><a class="link-page" href="./portfolio.html">Портфолио</a></li>
-      <li class="link-li-page"><a class="link-page" href="">Контакты</a></li></li>
-      </ul>
-<ul  class="link-ul-contact">
-
-      <li class="link-li-page"><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="link-li-page"><a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a></li>
-    </ul>
-    </div>
-  </header>
-      <main>
-        <section class="main-section">
-        <h1 class="main-section-h">Эффективные решения<br>для вашего бизнеса</h1>
+      <div class="container header-container">
+        <a class="logo" href="./index.html"
+          ><span class="span">Web</span>Studio</a
+        >
+        <ul class="list">
+          <li class="link-item-page">
+            <a class="link-page active-page" href="./index.html">Студия</a>
+          </li>
+          <li class="link-item-page">
+            <a class="link-page" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="link-item-page">
+            <a class="link-page" href="">Контакты</a>
+          </li>
+        </ul>
+        <ul class="link-contact">
+          <li class="link-item-page">
+            <a class="link-header" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="link-item-page">
+            <a class="link-header" href="tel:++380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section class="main-section">
+        <h1 class="main-section-title">
+          Эффективные решения<br />для вашего бизнеса
+        </h1>
         <button class="main-section-button">Заказать услугу</button>
-     </section>
+      </section>
 
-        <section class="activity-section">
-          <div class="container">
-          <ul class="link-ul-page">
-            <li class="activity-li">
+      <section class="activity-section">
+        <div class="container">
+          <ul class="list">
+            <li class="activity-item">
               <h3 class="activity-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="activity-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="activity-li">
+            <li class="activity-item">
               <h3 class="activity-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="activity-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="activity-li">
+            <li class="activity-item">
               <h3 class="activity-title">ПЛАНИРОВАНИЕ</h3>
               <p class="activity-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="activity-li">
+            <li class="activity-item">
               <h3 class="activity-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="activity-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -65,74 +85,103 @@
             </li>
           </ul>
         </div>
-        </section>
-        <section class="direction-section">
-          <div class="container  " >
+      </section>
+      <section class="direction-section">
+        <div class="container">
           <h2 class="direction">Чем мы занимаемся</h2>
-          <ul>
-            <li class="direction-li">
-              <img class="img-class"
+          <ul class="direction-list">
+            <li class="direction-item">
+              <img
+                class="img-class"
                 src="./images.new/specification1.jpg"
                 alt="Человек за компьютером"
               />
             </li>
-            <li class="direction-li">
-              <img class="img-class"
+            <li class="direction-item">
+              <img
+                class="img-class"
                 src="./images.new/specification2.jpg"
                 alt="Человек смотрит в телефон"
               />
             </li>
-            <li class="direction-li">
-              <img class="img-class"
+            <li class="direction-item">
+              <img
+                class="img-class"
                 src="./images.new/specification3.jpg"
                 alt="Человек смотрит в планшет"
               />
             </li>
           </ul>
         </div>
-        </section>
-        <section class="command-section">
-          <div class="container"> 
+      </section>
+      <section class="command-section">
+        <div class="container">
           <h2 class="command-title">Наша команда</h2>
-        <ul class="link-ul-page ">
+          <ul class="list">
+            <li class="command-item">
+              <img
+                class="command-photo"
+                src="./images.new/command1.jpg"
+                alt="Мужчина с бородой"
+              />
+              <h3 class="command-name">Игорь Демьяненко</h3>
+              <p class="command-person">Product Designer</p>
+            </li>
+            <li class="command-item">
+              <img
+                class="command-photo"
+                src="./images.new/command2.jpg"
+                alt="Женщина в очках"
+              />
+              <h3 class="command-name">Ольга Репина</h3>
+              <p class="command-person">Frontend Developer</p>
+            </li>
+            <li class="command-item">
+              <img
+                class="command-photo"
+                src="./images.new/command3.jpg"
+                alt="Улыбающийся мужчина"
+              />
+              <h3 class="command-name">Николай Тарасов</h3>
+              <p class="command-person">Marketing</p>
+            </li>
+            <li class="command-item">
+              <img
+                class="command-photo"
+                src="./images.new/command4.jpg"
+                alt="Мужчина с бородой и очками"
+              />
+              <h3 class="command-name">Михаил Ермаков</h3>
+
+              <p class="command-person">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo-footer" href="./index.html"
+          ><span class="span">Web</span>Studio</a
+        >
+        <ul>
           <li>
-            <img class="command-photo" src="./images.new/command1.jpg" alt="Мужчина с бородой" />
-            <h3 class="command-name">Игорь Демьяненко</h3>
-            <p class="command-person">Product Designer</p>
+            <address class="footer-address">
+              г. Киев, пр-т Леси Украинки, 26
+            </address>
           </li>
           <li>
-            <img class="command-photo"  src="./images.new/command2.jpg" alt="Женщина в очках" />
-            <h3 class="command-name">Ольга Репина</h3>
-            <p class="command-person">   Frontend Developer</p>
+            <a class="footer-email" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <img class="command-photo"  src="./images.new/command3.jpg" alt="Улыбающийся мужчина" />
-            <h3 class="command-name">Николай Тарасов</h3>
-            <p  class="command-person">Marketing</p>
-          </li>
-          <li>
-            <img class="command-photo" 
-              src="./images.new/command4.jpg"
-              alt="Мужчина с бородой и очками" />
-            <h3 class="command-name">Михаил Ермаков</h3>
-             
-            <p class="command-person" >UI Designer</p>
+            <a class="footer-tel" href="tel:++380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
-        </section>
-      </main>
-      <footer class="footer">
-      <div class="container">
-    
-        <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
-        <ul>
-        <li><address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address></li>
-        <li><a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="footer-nav-tel"  href="tel:++380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </div>
-      </footer>
-   
+    </footer>
   </body>
 </html>
