--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <div class="container header-div">
-      <a class="logo" href=""><span class="span">Web</span>Studio</a>
+      <a class="logo" href="./index.html"><span class="span">Web</span>Studio</a>
       <ul class="link-ul-page">
-        <li class="link-li-page"><a class="link-page" href="">Студия</a></li>
-        <li class="link-li-page"><a class="link-page" href="./index.html">Портфолио</a></li>
+        <li class="link-li-page"><a class="link-page" href="./index.html">Студия</a></li>
+        <li class="link-li-page"><a class="link-page active-page" href="./portfolio.html">Портфолио</a></li>
       <li class="link-li-page"><a class="link-page" href="">Контакты</a></li></li>
       </ul>
 <ul  class="link-ul-contact">
@@ -111,7 +111,7 @@
     <footer class="footer">
       <div class="container">
     
-        <a class="logo-footer" href=""><span class="span">Web</span>Studio</a>
+        <a class="logo-footer" href="./index.html"><span class="span">Web</span>Studio</a>
         <ul>
         <li><address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address></li>
         <li><a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
