--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <header>
       <div class="container header-container">
-        <a class="logo" href="./index.html"
-          ><span class="span">Web</span>Studio</a
+        <a class="logo" href="./index.html">
+          <span class="span">Web</span>Studio</a
         >
         <ul class="list">
           <li class="link-item-page">
