--- a/portfolio.html
+++ b/portfolio.html
@@ -15,109 +15,170 @@
   </head>
   <body>
     <header>
-      <div class="container header-div">
-      <a class="logo" href="./index.html"><span class="span">Web</span>Studio</a>
-      <ul class="link-ul-page">
-        <li class="link-li-page"><a class="link-page" href="./index.html">Студия</a></li>
-        <li class="link-li-page"><a class="link-page active-page" href="./portfolio.html">Портфолио</a></li>
-      <li class="link-li-page"><a class="link-page" href="">Контакты</a></li></li>
-      </ul>
-<ul  class="link-ul-contact">
-
-      <li class="link-li-page"><a class="nav-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="link-li-page"><a class="nav-header" href="tel:++380961111111">+38 096 111 11 11</a></li>
-    </ul>
-    </div>
-  </header>
-      
-    <main>
-      <section">
-       <div class="container"> 
-         <ul>
-        <li><button class="filters">Все</button></li>
-        <li><button class="filters">Веб-сайты</button></li>
-        <li><button class="filters">Приложения</button></li>
-        <li><button class="filters">Дизайн</button></li>
-        <li><button class="filters">Маркетинг</button></li>
-      </ul>
-    </div>
-      </section>
-      <section class="portfolio">
-        <div class="container">
-        <ul>
-          <li>
-            <img class="portfolio-img"
-              src="./images.new/attainment1.jpg"
-              alt="Страница сайта на ноутбуке"
-            />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+      <div class="container header-container">
+        <a class="logo" href="./index.html"
+          ><span class="span">Web</span>Studio</a
+        >
+        <ul class="list">
+          <li class="link-item-page">
+            <a class="link-page" href="./index.html">Студия</a>
           </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment2.jpg" alt="Постер спортсметов" />
-            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-text">Дизайн</p>
+          <li class="link-item-page">
+            <a class="link-page active-page" href="./portfolio.html"
+              >Портфолио</a
+            >
           </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment3.jpg" alt="Логотим ресторана" />
-            <h3 class="portfolio-title">Ресторан Seafood</h3>
-            <p class="portfolio-text">Приложение</p>
+          <li class="link-item-page">
+            <a class="link-page" href="">Контакты</a>
           </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment4.jpg" alt="Наушники" />
-            <h3 class="portfolio-title">Проект Prime</h3>
-            <p class="portfolio-text">Маркетинг</p>
+        </ul>
+        <ul class="link-contact">
+          <li class="link-item-page">
+            <a class="link-header" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment5.jpg" alt="Две коробки" />
-            <h3 class="portfolio-title">Проект Boxes</h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment6.jpg" alt="Монитор с картой" />
-            <h3 class="portfolio-title">Inspiration has no Borders</h3>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment7.jpg" alt="Журнал" />
-            <h3 class="portfolio-title">Издание Limited Edition</h3>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-
-          <li>
-            <img class="portfolio-img" src="./images.new/attainment8.jpg" alt="Ярлык с логотипом" />
-            <h3 class="portfolio-title">Проект LAB</h3>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-
-          <li>
-            <img class="portfolio-img"
-              src="./images.new/attainment9.jpg"
-              alt="Страница сайта на ноутбуке"
-            />
-            <h3 class="portfolio-title">Growing Business</h3>
-            <p class="portfolio-text">Приложение</p>
+          <li class="link-item-page">
+            <a class="link-header" href="tel:++380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
+    </header>
+
+    <main>
+      <section class="filters-section">
+        <div class="container">
+          <ul class="filters-list">
+            <li class="filters"><button>Все</button></li>
+            <li class="filters"><button>Веб-сайты</button></li>
+            <li class="filters"><button>Приложения</button></li>
+            <li class="filters"><button>Дизайн</button></li>
+            <li class="filters"><button>Маркетинг</button></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="portfolio">
+        <div class="container">
+          <ul class="flex-container">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment1.jpg"
+                alt="Страница сайта на ноутбуке"
+              />
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment2.jpg"
+                alt="Постер спортсметов"
+              />
+              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment3.jpg"
+                alt="Логотим ресторана"
+              />
+              <h3 class="portfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment4.jpg"
+                alt="Наушники"
+              />
+              <h3 class="portfolio-title">Проект Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment5.jpg"
+                alt="Две коробки"
+              />
+              <h3 class="portfolio-title">Проект Boxes</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment6.jpg"
+                alt="Монитор с картой"
+              />
+              <h3 class="portfolio-title">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment7.jpg"
+                alt="Журнал"
+              />
+              <h3 class="portfolio-title">Издание Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment8.jpg"
+                alt="Ярлык с логотипом"
+              />
+              <h3 class="portfolio-title">Проект LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images.new/attainment9.jpg"
+                alt="Страница сайта на ноутбуке"
+              />
+              <h3 class="portfolio-title">Growing Business</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-    
-        <a class="logo-footer" href="./index.html"><span class="span">Web</span>Studio</a>
+        <a class="logo-footer" href="./index.html">
+          <span class="span">Web</span>Studio</a
+        >
         <ul>
-        <li><address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address></li>
-        <li><a class="footer-nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="footer-nav-tel"  href="tel:++380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </div>
-      </footer>
+          <li>
+            <address class="footer-address">
+              г. Киев, пр-т Леси Украинки, 26
+            </address>
+          </li>
+          <li>
+            <a class="footer-email" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="footer-tel" href="tel:++380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
