--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </ul>
         <ul class="link-contact">
           <li class="link-item-page">
-            <a class="link-header" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link-header mail" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
             >
           </li>
           <li class="link-item-page">
-            <a class="link-header" href="tel:++380961111111"
+            <a class="link-header tell" href="tel:++380961111111"
               >+38 096 111 11 11</a
             >
           </li>
