--- a/index.html
+++ b/index.html
@@ -45,38 +45,39 @@
       </div>
     </header>
     <main>
-      <section class="main-section">
-        <h1 class="main-section-title">
-          Эффективные решения<br />для вашего бизнеса
-        </h1>
-        <button class="main-section-button">Заказать услугу</button>
-      </section>
-
+      <div class="hero">
+        <section class="main-section">
+          <h1 class="main-section-title">
+            Эффективные решения<br />для вашего бизнеса
+          </h1>
+          <button class="main-section-button">Заказать услугу</button>
+        </section>
+      </div>
       <section class="activity-section">
         <div class="container">
           <ul class="list">
-            <li class="activity-item">
+            <li class="activity-item antenna">
               <h3 class="activity-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="activity-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="activity-item">
+            <li class="activity-item clock">
               <h3 class="activity-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="activity-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="activity-item">
+            <li class="activity-item diagram">
               <h3 class="activity-title">ПЛАНИРОВАНИЕ</h3>
               <p class="activity-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="activity-item">
+            <li class="activity-item astronaut">
               <h3 class="activity-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="activity-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -126,6 +127,29 @@
               />
               <h3 class="command-name">Игорь Демьяненко</h3>
               <p class="command-person">Product Designer</p>
+
+              <ul class="social-list">
+                <li>
+                  <a class="social-network" href=""
+                    ><img src="./images.new/instagram.svg" alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a class="social-network" href=""
+                    ><img src="./images.new/twitter.svg" alt="twitter"
+                  /></a>
+                </li>
+                <li>
+                  <a class="social-network" href=""
+                    ><img src="./images.new/facebook.svg" alt="facebook"
+                  /></a>
+                </li>
+                <li>
+                  <a class="social-network" href=""
+                    ><img src="./images.new/inkedin.svg" alt="linkedin"
+                  /></a>
+                </li>
+              </ul>
             </li>
             <li class="command-item">
               <img
