add icons in studio

--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
         </ul>
         <ul class="link-contact">
           <li class="link-item-page">
-            <a class="link-header mail" href="mailto:info@devstudio.com">
+            <a class="link-header" href="mailto:info@devstudio.com">
+              <svg class="icon-mail">
+                <use href="./images.new/symbol-defs.svg#mail"></use>
+              </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="link-item-page">
-            <a class="link-header tell" href="tel:++380961111111"
-              >+38 096 111 11 11</a
+            <a class="link-header" href="tel:++380961111111">
+              <svg class="icon-tel">
+                <use href="./images.new/symbol-defs.svg#tell"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -56,28 +62,49 @@
       <section class="activity-section">
         <div class="container">
           <ul class="list">
-            <li class="activity-item antenna">
+            <li class="activity-item">
+              <div class="activity-icon-container">
+                <svg class="activity-icon">
+                  <use href="./images.new/symbol-defs.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="activity-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="activity-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="activity-item clock">
+
+            <li class="activity-item">
+              <div class="activity-icon-container">
+                <svg class="activity-icon">
+                  <use href="./images.new/symbol-defs.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="activity-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="activity-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="activity-item diagram">
+            <li class="activity-item">
+              <div class="activity-icon-container">
+                <svg class="activity-icon">
+                  <use href="./images.new/symbol-defs.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="activity-title">ПЛАНИРОВАНИЕ</h3>
               <p class="activity-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="activity-item astronaut">
+            <li class="activity-item">
+              <div class="activity-icon-container">
+                <svg class="activity-icon">
+                  <use href="./images.new/symbol-defs.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="activity-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="activity-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -130,24 +157,32 @@
 
               <ul class="social-list">
                 <li>
-                  <a class="social-network" href=""
-                    ><img src="./images.new/instagram.svg" alt="instagram"
-                  /></a>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a class="social-network" href=""
-                    ><img src="./images.new/twitter.svg" alt="twitter"
-                  /></a>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a class="social-network" href=""
-                    ><img src="./images.new/facebook.svg" alt="facebook"
-                  /></a>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a class="social-network" href=""
-                    ><img src="./images.new/inkedin.svg" alt="linkedin"
-                  /></a>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#inkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -159,6 +194,36 @@
               />
               <h3 class="command-name">Ольга Репина</h3>
               <p class="command-person">Frontend Developer</p>
+              <ul class="social-list">
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#inkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="command-item">
               <img
@@ -168,6 +233,36 @@
               />
               <h3 class="command-name">Николай Тарасов</h3>
               <p class="command-person">Marketing</p>
+              <ul class="social-list">
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#inkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="command-item">
               <img
@@ -178,6 +273,36 @@
               <h3 class="command-name">Михаил Ермаков</h3>
 
               <p class="command-person">UI Designer</p>
+              <ul class="social-list">
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network" href="">
+                    <svg class="social-svg">
+                      <use href="./images.new/symbol-defs.svg#inkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
