--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
   <body>
     <header>
       <div class="container header-container">
-        <a class="logo" href="./index.html"
-          ><span class="span">Web</span>Studio</a
+        <a class="logo" href="./index.html">
+          <span class="span">Web</span>Studio</a
         >
         <ul class="list">
           <li class="link-item-page">
@@ -34,13 +34,19 @@
         </ul>
         <ul class="link-contact">
           <li class="link-item-page">
-            <a class="link-header" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link-header" href="mailto:info@devstudio.com">
+              <svg class="icon-mail">
+                <use href="./images.new/symbol-defs.svg#mail"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="link-item-page">
-            <a class="link-header" href="tel:++380961111111"
-              >+38 096 111 11 11</a
+            <a class="link-header" href="tel:++380961111111">
+              <svg class="icon-tel">
+                <use href="./images.new/symbol-defs.svg#tell"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
